--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Para Panqueca</title>
+  <title>Caso Indefinido</title>
   <link rel="stylesheet" href="./css/index.css" />
   <link rel="shortcut icon" href="https://upload.wikimedia.org/wikipedia/commons/thumb/f/f1/Heart_corazón.svg/1200px-Heart_corazón.svg.png" type="image/x-icon">
 </head>
@@ -18,7 +18,7 @@
       alt="" class="conteudo__imagem" />
   </div>
   <button id="sim" class="conteudo__boton">Óbvio!</button>
-  <button id="nao" class="conteudo__boton">Never </button>
+  <button id="nao" class="conteudo__boton">Não </button>
 
   <script src="./js/index.js" type="module"></script>
 </body>
